--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,10 +8,12 @@
   <link rel="shortcut icon" href="{{site.url}}img/favicon.ico"</link>
 
   <script type="text/javascript" src="{{ site.url }}javascripts/main.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
-<body class="bg-gray">
-  <div id="header">
-    <div id="me">
+<body>
+  <div id="header" class="navbar navbar-default">
+    <div id="pic">
       <span>
         <a href="/">
           <img src="http://www.gravatar.com/avatar/{{ site.gravatar }}?s=130"
@@ -20,23 +22,35 @@
                class="avatar">
         </a>
       </span>
+    </div>
+    <div id="name">
       <span>
         <a href="/">
-          <span id="Patrick">{{ site.title }}</span>
-          <span id="Slattery">{{ site.subtitle }}</span>
+          <span id="patrick"><strong>{{ site.title }}</strong></span>
+          <span id="divider">::</span>
+          <span id="subtitle">{{ site.subtitle }}</span>
         </a>
       </span>
     </div>
-    <div id="mousing"> &nbsp;</div>
-    <div class="site">
-      <a id="github" href="https//github.com/patslat"></a>
-      <a id="twitter" href="https//twitter.com/patslat4"></a>
+  </div>
+  <div id="sidebar">
+    <div class="sites">
+      <div class="twitter-link">
+        <a href="https://twitter.com/PatSlat4" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @PatSlat4</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </div>
+      <div class="github-link">
+        <a id="github" href="https//github.com/patslat">
+          <img src="{{ site.url }}/images/GitHub-Mark-32px.png">
+        </a>
+      </div>
     </div>
-
     <div id="sections">
       <a href="{{ site.url }}/about.html">About</a>
     </div>
-  <div id="main">
+  </div>
+
+  <div id="main" class="container">
     {{content}}
   </div>
 </body>
