--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -12,46 +12,35 @@
 
 </head>
 <body>
-  <div id="header" class="navbar navbar-default">
-    <div id="pic">
+
+  <div id="header" class="">
+    <div id="title">
       <span>
         <a href="/">
-          <img src="http://www.gravatar.com/avatar/{{ site.gravatar }}?s=130"
-               height="130"
-               width="130"
-               class="avatar">
-        </a>
-      </span>
-    </div>
-    <div id="name">
-      <span>
-        <a href="/">
-          <span id="patrick"><strong>{{ site.title }}</strong></span>
-          <span id="divider">::</span>
-          <span id="subtitle">{{ site.subtitle }}</span>
+          <div id="patrick"><strong>{{ site.title }}</strong></div>
         </a>
       </span>
     </div>
   </div>
+
   <div id="sidebar">
-    <div class="sites">
-      <div class="twitter-link">
-        <a href="https://twitter.com/PatSlat4" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @PatSlat4</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </div>
-      <div class="github-link">
-        <a id="github" href="https//github.com/patslat">
-          <img src="{{ site.url }}/images/GitHub-Mark-32px.png">
-        </a>
-      </div>
+    <div id="pic" class="pull-left">
+      <a href="/">
+        <img src="http://www.gravatar.com/avatar/{{ site.gravatar }}?s=130"
+             height="130"
+             width="130"
+             class="avatar">
+      </a>
     </div>
-    <div id="sections">
+    <div id="sections" class="section">
       <a href="{{ site.url }}/about.html">About</a>
     </div>
   </div>
 
-  <div id="main" class="container">
+  <div id="main">
     {{content}}
   </div>
+
+
 </body>
 </html>
